# hw-test

./: .gitignore  CMakeLists.txt  deploy.sh  toolchain-mingw64.cmake
src/: cameraview.cpp  cameraview.h  commtest.cpp  commtest.h  main.cpp  mainwindow.cpp  mainwindow.h
